--- a/header.html
+++ b/header.html
@@ -9,9 +9,9 @@
     <nav>
       <ul class="nav">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="pages/books.html">Books</a></li>
-        <li class="nav-item"><a class="nav-link" href="pages/events.html">Events & Promotions</a></li>
-        <li class="nav-item"><a class="nav-link" href="pages/contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="../pages/books.html">Books</a></li>
+        <li class="nav-item"><a class="nav-link" href="../pages/events.html">Events & Promotions</a></li>
+        <li class="nav-item"><a class="nav-link" href="../pages/contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
