--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <header class="bg-light py-3 border-bottom">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center">
-      <a href="index.html" class="d-flex align-items-center text-decoration-none">
-        <img src="assets/LogoSillentLibrary.jpg" alt="Silent Library Logo" height="50" class="me-2">
+      <a href="../index.html" class="d-flex align-items-center text-decoration-none">
+        <img src="../assets/LogoSillentLibrary.jpg" alt="Silent Library Logo" height="50" class="me-2">
         <span class="fs-4 fw-bold text-dark">Silent Library</span>
       </a>
     </div>
