--- a/pages/test.html
+++ b/pages/test.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <div id="header"></div>
+  
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script>
     $(function () {
       $("#header").load("../header.html");
