--- a/pages/test.html
+++ b/pages/test.html
@@ -2,11 +2,12 @@
 <body>
   <div id="header"></div>
   
+  <p>This is a aragraph. . .</p>
+  
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script>
     $(function () {
       $("#header").load("../header.html");
-      $("#footer").load("../footer.html");
     });
   </script>
 </body>
