--- a/pages/contact.html
+++ b/pages/contact.html
@@ -90,6 +90,8 @@
 
   <div id="footer"></div>
 
+  <div id="header" data-level="1"></div>
+  
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> 
   <script>
     $(function () {
