--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col-md-8">
             <h3>New Books</h3>
-            <h3>222 Line after New Books</h3>
+            <h3>888 Line after New Books</h3>
             <div class="d-flex flex-wrap mb-3">
               <a href="pages/bookdetails_B00001.html"><img src="assets/B00001.jpg" class="me-3 mb-2 book-img" alt="B00001"></a>
               <a href="pages/bookdetails_B00002.html"><img src="assets/B00002.jpg" class="me-3 mb-2 book-img" alt="B00002"></a>
@@ -56,12 +56,28 @@
     <div id="footer"></div>
   </div>
 
+  <div id="header" data-level="0"></div>
+  
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script>
     $(function () {
-      $("#header").load("header.html");
+      $("#header").load("header.html", function () {
+        adjustHeaderPaths($("#header").data("level"));
+      });
+
       $("#footer").load("footer.html");
     });
+  
+    function adjustHeaderPaths(level) {
+      let prefix = level == 0 ? "" : "../";
+      $("#header img").attr("src", prefix + "assets/LogoSillentLibrary.jpg");
+      $("#header a.nav-link[href$='index.html']").attr("href", prefix + "index.html");
+      $("#header a.nav-link[href$='books.html']").attr("href", prefix + "pages/books.html");
+      $("#header a.nav-link[href$='events.html']").attr("href", prefix + "pages/events.html");
+      $("#header a.nav-link[href$='contact.html']").attr("href", prefix + "pages/contact.html");
+      $("#header a[href$='index.html'] img").parent().attr("href", prefix + "index.html"); // Logo link
+    }
   </script>
+  
 </body>
 </html>
