--- a/pages/contact.html
+++ b/pages/contact.html
@@ -93,6 +93,7 @@
   <div id="header" data-level="1"></div>
   
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> 
+  <script src="scripts/header-paths.js"></script>
   <script>
     $(function () {
       $("#header").load("../header.html", function () {
@@ -101,16 +102,6 @@
 
       $("#footer").load("../footer.html");
     });
-  
-    function adjustHeaderPaths(level) {
-      let prefix = level == 0 ? "" : "../";
-      $("#header img").attr("src", prefix + "assets/LogoSillentLibrary.jpg");
-      $("#header a.nav-link[href$='index.html']").attr("href", prefix + "index.html");
-      $("#header a.nav-link[href$='books.html']").attr("href", prefix + "pages/books.html");
-      $("#header a.nav-link[href$='events.html']").attr("href", prefix + "pages/events.html");
-      $("#header a.nav-link[href$='contact.html']").attr("href", prefix + "pages/contact.html");
-      $("#header a[href$='index.html'] img").parent().attr("href", prefix + "index.html");
-    }
   </script>
 
   
