--- a/pages/books.html
+++ b/pages/books.html
@@ -177,12 +177,20 @@
   </div>
 
   <div id="footer"></div>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+  <div id="header" data-level="1"></div>
+    
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> 
+  <script src="scripts/header-paths.js"></script>
   <script>
     $(function () {
-      $("#header").load("../header.html");
+      $("#header").load("../header.html", function () {
+        adjustHeaderPaths($("#header").data("level"));
+      });
+
       $("#footer").load("../footer.html");
     });
   </script>
+  
 </body>
 </html>
