--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
   <script src="scripts/header-paths.js"></script>
   <script>
     $(function () {
+
+      /*
       $("#header").load("header.html", function () {
         adjustHeaderPaths($("#header").data("level"));
       });
-
+      */
+      $("#header").load("header.html");
       $("#footer").load("footer.html");
     });
   </script>
