--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col-md-8">
             <h3>New Books</h3>
-            <h3>551 Line after New Books</h3>
+            <!--<h3>551 Line after New Books</h3>-->
             <div class="d-flex flex-wrap mb-3">
               <a href="pages/bookdetails_B00001.html"><img src="assets/B00001.jpg" class="me-3 mb-2 book-img" alt="B00001"></a>
               <a href="pages/bookdetails_B00002.html"><img src="assets/B00002.jpg" class="me-3 mb-2 book-img" alt="B00002"></a>
