--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="row">
           <div class="col-md-8">
             <h3>New Books</h3>
+            <h3>Line after New Books</h3>
             <div class="d-flex flex-wrap mb-3">
               <a href="pages/bookdetails_B00001.html"><img src="assets/B00001.jpg" class="me-3 mb-2 book-img" alt="B00001"></a>
               <a href="pages/bookdetails_B00002.html"><img src="assets/B00002.jpg" class="me-3 mb-2 book-img" alt="B00002"></a>
@@ -55,10 +56,20 @@
     <div id="footer"></div>
   </div>
 
+  <div id="header" data-level="0"></div>
+  
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="scripts/header-paths.js"></script>
   <script>
     $(function () {
-      $("#header").load("header.html");
+      $(function () {
+        $("#header").load("header.html", function () {
+          adjustHeaderPaths($("#header").data("level"));
+        });
+      });
+      
+      // $("#header").load("header.html");
+     
       $("#footer").load("footer.html");
     });
   </script>
