--- a/header.html
+++ b/header.html
@@ -1,26 +1,17 @@
 <header class="bg-light py-3 border-bottom">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center">
-      <!-- Logo link will be updated by header-paths.js -->
-      <a href="index.html" class="d-flex align-items-center text-decoration-none">
-        <img src="assets/LogoSillentLibrary.jpg" alt="Silent Library Logo" height="50" class="me-2">
+      <a id="logo-link" href="index.html" class="d-flex align-items-center text-decoration-none">
+        <img id="logo-img" src="assets/LogoSillentLibrary.jpg" alt="Silent Library Logo" height="50" class="me-2">
         <span class="fs-4 fw-bold text-dark">Silent Library</span>
       </a>
     </div>
     <nav>
       <ul class="nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/books.html">Books</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/events.html">Events & Promotions</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/contact.html">Contact</a>
-        </li>
+        <li class="nav-item"><a id="nav-home" class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a id="nav-books" class="nav-link" href="pages/books.html">Books</a></li>
+        <li class="nav-item"><a id="nav-events" class="nav-link" href="pages/events.html">Events & Promotions</a></li>
+        <li class="nav-item"><a id="nav-contact" class="nav-link" href="pages/contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
