--- a/pages/contact.html
+++ b/pages/contact.html
@@ -91,7 +91,7 @@
   <div id="footer"></div>
     
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> 
-  <script src="scripts/header-paths.js"></script>
+  <script src="../scripts/header-paths.js"></script>
   
   <script>
     $(function () {
