Update header and index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 
     <main class="flex-fill">
       <div class="container mt-4">
+
+        <!-- Welcome Message -->
+        <div class="mb-5">
+          <h2>Welcome to Silent Library</h2>
+          <h5 class="text-muted">Read. Learn. Grow.</h5>
+          <p>
+            At Silent Library, we believe in the quiet power of reading to transform lives. Whether you're exploring new knowledge, diving into stories, or seeking inspiration, our carefully curated collection is here to support your journey.
+          </p>
+          <p>
+            Embrace the joy of discovery, enrich your understanding, and grow with every page you turn.
+          </p>
+        </div>
+
         <div class="row">
           <div class="col-md-8">
             <h3>New Books</h3>
@@ -56,6 +69,7 @@
     <div id="footer" data-level="0"></div>
   </div>
   
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="scripts/header-paths.js"></script>
   <script src="scripts/footer-paths.js"></script>
