--- a/pages/books.html
+++ b/pages/books.html
@@ -8,6 +8,26 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../styles/style.css">
   <link rel="icon" type="image/png" href="../assets/SL-Logo-Small.png">
+  <style>
+    #backToTopBtn {
+    display: none; /* Hidden by default */
+    position: fixed;
+    bottom: 40px;
+    right: 20px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #198754; /* Bootstrap success */
+    color: white;
+    cursor: pointer;
+    padding: 10px 14px;
+    border-radius: 50%;
+    font-size: 16px;
+  }
+  #backToTopBtn:hover {
+    background-color: #145c32;
+  }
+  </style>
 </head>
 <body>
   <div id="header" data-level="1"></div>
@@ -192,9 +212,28 @@
 
       $("#footer").load("../footer.html", function () {
           adjustFooterPaths($("#footer").data("level"));
-        });
+      });
+
+      // Show/hide and scroll to top logic
+      $(window).scroll(function () {
+        if ($(this).scrollTop() > 200) {
+          $("#backToTopBtn").fadeIn();
+        } else {
+          $("#backToTopBtn").fadeOut();
+        }
+      });
+
+      $("#backToTopBtn").click(function () {
+        $("html, body").animate({ scrollTop: 0 }, 600);
+        return false;
+      });
     });
   </script>
   
+  <!-- Back to Top Button -->
+  <button id="backToTopBtn" class="btn btn-success" title="Go to top">
+    ↑ Top
+  </button>
+
 </body>
 </html>
