--- a/pages/contactsubmitted.html
+++ b/pages/contactsubmitted.html
@@ -28,7 +28,7 @@
     <h3>Submission Successful</h3>
     <p>Thank you for contacting Silent Library.</p>
     <p>We will get back to you as soon as possible.</p>
-    <a href="/index.html" class="btn btn-success mt-3">Back to Home</a>
+    <a href="../index.html" class="btn btn-success mt-3">Back to Home</a>
   </main>
 
   <div id="footer" data-level="1"></div>
